added missing links to posts

--- a/assets/templates/Forum Skeleton/Categories.cshtml
+++ b/assets/templates/Forum Skeleton/Categories.cshtml
@@ -34,13 +34,13 @@
 						<h2><a href="Category.cshtml">{Category Name}</a></h2>
 						<p>A brief description of the category.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.
@@ -49,13 +49,13 @@
 						<h2><a href="Category.cshtml">{Category Name}</a></h2>
 						<p>A brief description of the category.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.
@@ -64,13 +64,13 @@
 						<h2><a href="Category.cshtml">{Category Name}</a></h2>
 						<p>A brief description of the category.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.
@@ -85,9 +85,9 @@
 						<h3><a href="Category.cshtml">{Category Name}</a></h3>            
 						<p>A brief description of the category.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.                
@@ -96,9 +96,9 @@
 						<h3><a href="Category.cshtml">{Category Name}</a></h3>            
 						<p style="font-size: smaller;">A brief description of the category.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.                
@@ -107,9 +107,9 @@
 						<h3><a href="Category.cshtml">{Category Name}</a></h3>            
 						<p style="font-size: smaller;">A brief description of the category.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.                
@@ -118,9 +118,9 @@
 						<h3><a href="Category.cshtml">{Category Name}</a></h3>    
 						<p style="font-size: smaller;">A brief description of the category.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.                
