--- a/assets/templates/Forum Skeleton/Post.cshtml
+++ b/assets/templates/Forum Skeleton/Post.cshtml
@@ -91,7 +91,7 @@
 							</div>
 
 							<div class="span9">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>Comments are displayed beneath an article according to the selected sort order. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
@@ -113,7 +113,7 @@
 						<div class="row">
 
 							<div class="span6 offset3">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>Initial replies are indented to indicate hierarchy. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
@@ -153,7 +153,7 @@
 						<div class="row">
 
 							<div class="span6 offset3">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
+								<p>However, replies to replies are not indented further, they are simply displayed in chronological order. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tristique
 									massa eget est accumsan quis tincidunt libero facilisis. In ac tortor diam, sit
 									amet volutpat.</p>
 							</div>
