--- a/assets/templates/Forum Skeleton/Tags.cshtml
+++ b/assets/templates/Forum Skeleton/Tags.cshtml
@@ -32,13 +32,13 @@
 						<h2><a href="Tag.cshtml">{Tag Name}</a></h2>
 						<p>A brief description of the tag.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.
@@ -47,13 +47,13 @@
 						<h2><a href="Tag.cshtml">{Tag Name}</a></h2>
 						<p>A brief description of the tag.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.
@@ -62,13 +62,13 @@
 						<h2><a href="Tag.cshtml">{Tag Name}</a></h2>
 						<p>A brief description of the tag.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A truncated post body. Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>     
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.
@@ -83,9 +83,9 @@
 						<h3><a href="Tag.cshtml">{Tag Name}</a></h3>           
 						<p>A brief description of the tag.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.                
@@ -94,9 +94,9 @@
 						<h3><a href="Tag.cshtml">{Tag Name}</a></h3>           
 						<p style="font-size: smaller;">A brief description of the tag.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.                
@@ -105,9 +105,9 @@
 						<h3><a href="Tag.cshtml">{Tag Name}</a></h3>           
 						<p style="font-size: smaller;">A brief description of the tag.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.                
@@ -116,9 +116,9 @@
 						<h3><a href="Tag.cshtml">{Tag Name}</a></h3>           
 						<p style="font-size: smaller;">A brief description of the tag.</p>
 						<dl>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>A severely truncated post body.<br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>
-							<dt>{Post title}</dt>                    
+							<dt><a href="Post.cshtml">{Post title}</a></dt>                    
 							<dd>Etiam porta sem malesuada magna mollis euismod. <br/> <span style="font-size: smaller;"><em>Three hours ago</em> by <a href="#">username</a> with 33 comments.</span></dd>  
 						</dl>
 						<a href="#">View</a> 33 more posts.                
