--- a/assets/templates/Forum Skeleton/Categories.cshtml
+++ b/assets/templates/Forum Skeleton/Categories.cshtml
@@ -21,6 +21,11 @@
         
 			<div class="content">
         
+			<ul class="breadcrumb">
+				<li><a href="Home.cshtml">{Forum Name} Home</a> <span class="divider">/</span></li>
+				<li class="active">Categories</li>
+			</ul>
+
 				<h1>Categories</h1>
         
 				<hr/>
