--- a/assets/templates/Forum Skeleton/Post.cshtml
+++ b/assets/templates/Forum Skeleton/Post.cshtml
@@ -23,7 +23,8 @@
 
 		<div class="content">
 			<ul class="breadcrumb">
-				<li><a href="AllPosts.cshtml">All Posts</a> <span class="divider">/</span></li>
+				<li><a href="Home.cshtml">{Forum Name} Home</a> <span class="divider">/</span></li>
+				<li><a href="Categories.cshtml">Categories</a> <span class="divider">/</span></li>
 				<li><a href="Category.cshtml">{Category}</a> <span class="divider">/</span></li>
 				<li class="active">{Post Name}</li>
 			</ul>
