--- a/assets/templates/Forum Skeleton/UserFavorites.cshtml
+++ b/assets/templates/Forum Skeleton/UserFavorites.cshtml
@@ -1,43 +1,36 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>{Forum Name} - {Username}'s Favorites</title>
-		<meta name="description" content="">
-		<meta name="author" content="">
+<head>
+	<meta charset="utf-8">
+	<title>{Forum Name} - {Username}'s Favorites</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
+	@RenderPage("~/partials/shared/Styles.cshtml")
+	@RenderPage("~/partials/shared/Scripts.cshtml")
+</head>
+<body>
+	@RenderPage("~/partials/TopBar.cshtml")
 
-		@RenderPage("~/partials/shared/Styles.cshtml")
-		@RenderPage("~/partials/shared/Scripts.cshtml")
+	<div class="container-fluid">
+		@RenderPage("~/partials/Sidebar.cshtml")
 
-	</head>
-
-	<body>
-
-		@RenderPage("~/partials/TopBar.cshtml")
-
-		<div class="container-fluid">
-
-			@RenderPage("~/partials/Sidebar.cshtml")
-
-			<div class="content">
-
-				<h1>{Username}'s Favorites</h1>
-
-				<ul class="breadcrumb">
-					<li><a href="AllUsers.cshtml">Users</a> <span class="divider">/</span></li>
-					<li><a href="User.cshtml">{Username}</a> <span class="divider">/</span></li>
-					<li class="active">Favorites</li>
-				</ul>
-
-				<hr />
-
-				@RenderPage("~/partials/UserProfileTabs.cshtml")
-
-				<footer>
-					<p>&copy; Newco 2011-12</p>
-				</footer>
-			</div>
+		<div class="content">
+			<h1>{Username}'s Favorites</h1>
+			<ul class="breadcrumb">
+				<li><a href="Home.cshtml">{Forum Name} Home</a> <span class="divider">/</span></li>
+				<li><a href="AllUsers.cshtml">All Users</a> <span class="divider">/</span></li>
+				<li><a href="User.cshtml">{Username}</a> <span class="divider">/</span></li>
+				<li class="active">Favorites</li>
+			</ul>
+			<hr />
+			@RenderPage("~/partials/UserProfileTabs.cshtml")
+			<p><small>(User info here.)</small></p>
+			<footer>
+				<p>&copy; Newco 2011-12</p>
+			</footer>
 		</div>
 
-	</body>
+	</div>
+
+</body>
 </html>
