--- a/assets/templates/Forum Skeleton/AllUsers.cshtml
+++ b/assets/templates/Forum Skeleton/AllUsers.cshtml
@@ -1,41 +1,33 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>{Forum Name} - All Users</title>
-		<meta name="description" content="">
-		<meta name="author" content="">
+<head>
+	<meta charset="utf-8">
+	<title>{Forum Name} - All Users</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
+	@RenderPage("~/partials/shared/Styles.cshtml")
+	@RenderPage("~/partials/shared/Scripts.cshtml")
+</head>
+<body>
+	@RenderPage("~/partials/TopBar.cshtml")
 
-		@RenderPage("~/partials/shared/Styles.cshtml")
-		@RenderPage("~/partials/shared/Scripts.cshtml")
+	<div class="container-fluid">
+		@RenderPage("~/partials/Sidebar.cshtml")
 
-	</head>
-
-	<body>
-
-		@RenderPage("~/partials/TopBar.cshtml")
-
-		<div class="container-fluid">
-        
-			@RenderPage("~/partials/Sidebar.cshtml")
-        
-			<div class="content">
-        
-				<h1>All Users</h1>
-        
-				<ul class="breadcrumb">
-					<li class="active">Users</li>
-				</ul>
-        
-				<hr />
-        
-				<p><small>(User listing goes here.)</small></p>
-            
-				<footer>
-					<p>&copy; Newco 2011-12</p>
-				</footer>
-			</div>
+		<div class="content">
+			<ul class="breadcrumb">
+				<li><a href="Home.cshtml">{Forum Name} Home</a> <span class="divider">/</span></li>
+				<li class="active">All Users</li>
+			</ul>
+			<h1>All Users</h1>
+			<hr />
+			<p><small>(User listing goes here.)</small></p>
+			<footer>
+				<p>&copy; Newco 2011-12</p>
+			</footer>
 		</div>
 
-	</body>
+	</div>
+
+</body>
 </html>
