added pagination to tag and category screens

--- a/assets/templates/Forum Skeleton/Category.cshtml
+++ b/assets/templates/Forum Skeleton/Category.cshtml
@@ -253,6 +253,22 @@
 
 			</div>
 
+			<hr />
+
+			<div class="pagination">
+				<ul>
+					<li class="prev disabled"><a href="#">&larr; Previous</a></li>
+					<li><a href="Category.cshtml">1</a></li>
+					<li class="active"><a href="#">2</a></li>
+					<li><a href="Category.cshtml">3</a></li>
+					<li class="disabled"><a href="#">...</a></li>
+					<li><a href="Category.cshtml">45</a></li>
+					<li><a href="Category.cshtml">46</a></li>
+					<li><a href="Category.cshtml">47</a></li>
+					<li class="next"><a href="Tag.cshtml">Next &rarr;</a></li>
+				</ul>
+			</div>
+
 			<footer>
 				<p>&copy; Newco 2011-12</p>
 			</footer>
