added all users screen, minor changes elsewere

--- a/assets/templates/Forum Skeleton/partials/TopUsers.cshtml
+++ b/assets/templates/Forum Skeleton/partials/TopUsers.cshtml
@@ -50,4 +50,4 @@
 	</div>
 </div>
 <br/>
-<p><a href="AllUsers.cshtml">View all users.</a></p>
+<p><a href="AllUsers.cshtml">View all users</a>.</p>
