--- a/assets/templates/Forum Skeleton/partials/Categories.cshtml
+++ b/assets/templates/Forum Skeleton/partials/Categories.cshtml
@@ -7,4 +7,4 @@
 	<li><a href="Category.cshtml">Placeholder Category</a> (10)</li>
 	<li><a href="Category.cshtml">Example Category</a> (10)</li>
 </ul>
-<p><a href="Categories.cshtml">View all categories.</a></p>
+<p><a href="Categories.cshtml">View all categories</a>.</p>
