--- a/assets/templates/Forum Skeleton/partials/Tags.cshtml
+++ b/assets/templates/Forum Skeleton/partials/Tags.cshtml
@@ -1,4 +1,4 @@
 ﻿<h3>Tags</h3>
 <div id="tagCloud" style="height: 175px; width: 150px; position: relative;"></div>
 <br/>
-<p><a href="Tags.cshtml">View all tags.</a></p>
+<p><a href="Tags.cshtml">View all tags</a>.</p>
